--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,25 +1,27 @@
 name: CI Pipeline
-on: [push] # Trigger the workflow on push events to any branch
+on: [push]
 
 jobs:
-  build and test:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Set up Docker
-        run: docker build -t my-app .
+        run: |
+          docker build -t my-app .
+          docker run -d -p 8080:80 --name test-app my-app
 
-      - name: Spin up Container
-        run: docker run -d -p 8080:80
---name: test-app my-app
-
-      - name: install node & playwright
+      - name: Install Node and Playwright
         uses: actions/setup-node@v4
-      - run: npm install
-      -run: npx playwright install
---with-deps
+        with:
+          node-version: 18
+      
+      - name: Install Dependencies
+        run: |
+          npm install
+          npx playwright install --with-deps
 
       - name: Run tests
         run: npx playwright test
