--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
-      
+
       - name: Install Dependencies
         run: |
           npm install
@@ -25,3 +25,11 @@ jobs:
 
       - name: Run tests
         run: npx playwright test
+
+      - name: Upload test results
+        if: always()
+        uses: actions/checkout@v4
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 7
